full xinclude support with internal xerces